# whisperX

./: .dockerignore  .env.template  .gitignore  741f.patch  AGENTS.md  ARCHITECTURE_ANALYSIS.md  BATCH_PROCESSING_FINAL_RESULTS.md  CHANGELOG.md  CHANGELOG_MLX.md  CLAUDE.md  CUDNN_TROUBLESHOOTING.md  DEPENDENCY_UPDATE.md  DOCKER_DEPLOYMENT.md  Dockerfile  ENHANCEMENT_SUCCESS_SUMMARY.md  EXAMPLES.md  EnhancedLoggingExample.cs  GETTING_STARTED.md  GUI_ENHANCEMENT_COMPLETION.md  GUI_ENHANCEMENT_RECOMMENDATIONS.md  GUI_TEST_RESULTS.md  HOSTING.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALLER_README.md  LICENSE  MACOS_INSTALLER.md  MAC_PERFORMANCE.md  MANIFEST.in  MCP_SETUP.md  MLX_BACKEND_GUIDE.md  MLX_FORK_STATUS.md  MLX_IMPLEMENTATION_FINAL_SUMMARY.md  MODAL_WORKING_CONFIG.md  PROJECT_REVIEW.md  PYINSTALLER_TROUBLESHOOTING.md  PYTHON_RESOLUTION_FIX.md  QUICKSTART_INSTALLER.md  README.md  README_MLX.md  (+44 more)
.github/: FUNDING.yml
.github/workflows/: build-and-release.yml  docker-publish.yml  python-compatibility.yml  tests.yml  tmp.yml  zizmor.yml
Call Recordings/Transcriptions made with WhisperX/: English_example 2.json  English_example 2.srt  English_example 2.tsv  English_example 2.txt  English_example 2.vtt  English_example.json  English_example.srt  English_example.tsv  English_example.txt  English_example.vtt  French_example 2.json  French_example 2.srt  French_example 2.tsv  French_example 2.txt  French_example 2.vtt  French_example.json  French_example.srt  French_example.tsv  French_example.txt  French_example.vtt
NativeViewer/: Package.swift
NativeViewer/Resources/: AppIcon.icns  Info.plist
NativeViewer/Scripts/: build-app.sh
WhisperXGUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WhisperXGUI.csproj
app/: .env.example  BACKUP_API.md  README.md  build.ts  bunfig.toml  diarize_model.py  edits.py  events.py  jobs.py  package.json  paths.py  pipeline.py  render.py  requirements.txt  secret_store.py  server.py  sse.py  start-mac.sh  start.sh  store.py
app/backup/: __init__.py  backend.py  gdrive.py  local.py  manifest.py  oauth.py  service.py
app/branding/: Manuscript.icns  README.md
app/scripts/: vendor_diarize_model.py
app/src/: htmx.js  shoelace.js  vendor.css
app/static/: manuscript.css  sse.js
app/templates/: _device.html  _models.html  _result.html  _status.html  base.html  index.html  oauth_callback_error.html  oauth_callback_success.html  onboarding.html  settings.html  transcript.html
app/tests/: fake-eventsource.ts  load-sse.ts  setup.ts  sse.test.ts
crates/whisperx_ext/: Cargo.toml
demo/: app.py  requirements.txt
docker/: .dockerignore  DOCKERHUB_SETUP.md  Dockerfile  Dockerfile.cpu  README.md  api.py  docker-compose.yml  entrypoint.sh  requirements-api.txt
docker/web/: index.html
examples/: reference_whisperx_transcription.json  whisperx_smart_example.json
examples/mlx/: README.md  basic_transcription.py  batch_processing.py  benchmark.py  word_timestamps.py
examples/whisper/: sample01.wav.srt  sample_fr_01.wav.srt  sample_fr_01.wav.txt  sample_fr_01.wav.vtt
examples/whisperx/: sample01.wav.ass  sample01.wav.srt  sample01.wav.word.srt  sample_de_01.wav.ass  sample_de_01.wav.srt  sample_fr_01.wav.ass  sample_fr_01.wav.srt  sample_it_01.wav.ass  sample_it_01.wav.srt
frontend-proposals/: DASHBOARD-COMPARISON.md  SETUP-GUIDE.md
frontend-proposals/option-1-minimalist/: README.md
frontend-proposals/option-2-analytics/: README.md
frontend-proposals/option-3-cards/: README.md
frontend-proposals/ready-to-test/: .env.example  ADD-GEMINI-DOCUMENT-ID.sql  DISABLE-RLS.sql  FIX-RLS-COMPLETE.sql  README.md  package.json  tailwind.config.ts
models/: pyannote_diarization_config.yaml
notebooks/: whisperx.ipynb
packaging/macos/: Makefile  README.md  build.py  entitlements.plist  launcher.c
packaging/macos/tauri/: Cargo.toml  tauri.conf.json
packaging/macos/tauri/capabilities/: default.json
packaging/macos/tauri/src/: main.rs
scripts/: README.md  run_export.sh  run_train.sh  train_model.sh
tests/: test_alignment_batch.py  test_backup.py  test_backup_e2e.py  test_backup_server.py  test_backup_state.py  test_diarize_device.py  test_diarize_model_vendor.py  test_editing_e2e.py  test_highlight_color.py  test_mlx_backend.py  test_mms_alignment.py  test_onboarding_e2e.py  test_pathlib.py  test_qwen_alignment_adapter.py  test_qwen_asr_adapter.py  test_sse.py  test_turn_edits.py  test_turn_reassign_server.py  test_viewer.py  test_word_timestamp_interpolation.py
vox2me_whisperx/: SubtitlesProcessor.py  __init__.py  __main__.py  alignment.py  asr.py  audio.py  conjunctions.py  diarize.py  transcribe.py  utils.py
vox2me_whisperx/vads/: __init__.py  pyannote.py  silero.py
whisperX/: EXAMPLES.md  LICENSE  pyproject.toml
whisperX/whisperx/: SubtitlesProcessor.py  alignment.py  audio.py  transcribe.py
whisperX/whisperx/vads/: pyannote.py
whisperx/: SubtitlesProcessor.py  __init__.py  __init__.pyi  __main__.py  __version__.py  alignment.py  alignment_qwen.py  asr.py  asr_mlx.py  asr_openai_whisper.py  asr_qwen.py  asr_whispercpp.py  audio.py  batch_processor.py  benchmark.py  conjunctions.py  convert_alignment_models.py  convert_models.py  convert_vad_models.py  cph_main.py  decoding.py  diarize.py  diarize.py.rej  hardware.py  log_utils.py  main_test.py  model.py  offline_diarize.py  pipeline.py  process_separation.py  schema.py  transcribe.py  types.py  utils.py  vad.py  vad_mlx.py  viewer.py
whisperx/app/: app.py  app_bckp.py  app_config.py  history_manager.py  transcription_manager.py  transcription_workers.py  whisperx_bridge.py
whisperx/appSmartVoice/: README.md  main.py  requirements.txt
whisperx/assets/: config.yaml  mel_filters.npz
whisperx/backends/: __init__.py  base.py  faster_whisper.py  mlx_batch_optimized.py  mlx_batch_processor.py  mlx_whisper.py  mlx_whisper_v2.py
whisperx/launcher/: __init__.py  launcher_main.py
whisperx/normalizers/: __init__.py  spanish.json  spanish.py
whisperx/prosody_features/: README.md  data.py  eval_sv_model.py  export_embeddings.py  (+10 more)
(+241 files in other folders)
