[project]
urls = { repository = "https://github.com/m-bain/whisperx" }
authors = [{ name = "Max Bain" }]
name = "whisperx"
version = "3.4.2"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2>=4.5.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "onnxruntime>=1.19",
    "pandas>=2.2.3",
    "pyannote-audio>=4.0.0",
    # NOTE: some torchcodec versions are incompatible with some torch versions
    # and if you happen to use an incompatible version, you will currently see
    # a very obscure bad_alloc exception when those libs are loaded, which tells
    # you nothing at all and makes you waste hours and hours hunting down the
    # culprit.
    # https://github.com/meta-pytorch/torchcodec?tab=readme-ov-file#installing-torchcodec
    # contains a table showing which versions are compatible with each other.
    #
    # torchvision, by the way, also requires a compatible version
    "torch~=2.8.0",
    "torchaudio~=2.8.0",
    "torchcodec~=0.7.0",
    "tochvision~=0.23.0",
    # apparently they changed some default arguments values after transformers v4.51.0
    # I believe num_beams is the culprit. It used to be 1, now it is set to 5. See
    # https://github.com/huggingface/transformers/issues/40682
    # So, according to them if you pass num_beams=1 to the pipeline, versions >4.51.0
    # be as fast as before. But, since I am not exactly sure where to put that, I'll
    # just lock the version for now.
    "transformers>=4.48.0, <=4.51.0",
]


[project.scripts]
whisperx = "whisperx.__main__:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]
