[project]
urls = { repository = "https://github.com/m-bain/whisperx" }
authors = [{ name = "Max Bain" }]
name = "whisperx"
version = "3.8.1"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2>=4.5.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.1.0",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pyannote-audio>=4.0.0",
    "huggingface-hub<1.0.0",
    "torch~=2.8.0",
    "torchaudio~=2.8.0",
    "transformers>=4.48.0", # only install triton on x86_64 Linux
    "triton>=3.3.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "librosa>=0.11.0",
    "dotenv>=0.9.9",
    "scipy>=1.15.3",
]


[project.scripts]
whisperx = "whisperx.cph_main:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]

# torchcodec (transitive dep of pyannote-audio >=4) has no wheels for Linux aarch64
[tool.uv]
# NOTE: torchcodec -- torch compatibility table: 
# https://github.com/meta-pytorch/torchcodec#:~:text=The%20following%20table%20indicates%20the%20compatibility%20between%20versions%20of%20torchcodec%2C%20torch%20and%20Python.
override-dependencies = [
    "torchcodec~=0.7.0; (sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'darwin' or sys_platform == 'win32'",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
triton = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
