[project]
urls = { repository = "https://github.com/m-bain/whisperx" }
authors = [{ name = "Max Bain" }]
name = "whisperx"
version = "3.8.5"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.10, <3.15"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2>=4.6.1",
    "faster-whisper>=1.2.0",
    "nltk>=3.9.1",
    "numpy>=2.1.0",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pyannote-audio>=4.0.0",
    "huggingface-hub<1.0.0",
    "torch~=2.9.0",
    "torchaudio~=2.9.0",
    "torchvision~=0.24.0",
    "torchcodec>=0.6.0,<0.10.0; ((sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'darwin' or sys_platform == 'win32') and python_version < '3.14'",
    "torchcodec>=0.9.0; ((sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'darwin' or sys_platform == 'win32') and python_version == '3.14'",
    # faster-whisper dependency, pinned here for Python 3.14 wheels
    "onnxruntime>=1.24.1; python_version == '3.14'",
    "transformers>=4.48.0",
    "triton>=3.3.0; sys_platform == 'linux' and platform_machine == 'x86_64'" # only install triton on x86_64 Linux
]


[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
whisperx = "whisperx.__main__:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]

# torchcodec (transitive dep of pyannote-audio >=4) has no wheels for Linux aarch64
[tool.uv]
override-dependencies = [
    "torchcodec>=0.6.0,<0.8.0; ((sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'darwin' or sys_platform == 'win32') and python_version < '3.14'",
    "torchcodec>0.9.0; ((sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'darwin' or sys_platform == 'win32') and python_version == '3.14'",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "platform_machine != 'x86_64' and sys_platform != 'darwin'" },
  { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "platform_machine != 'x86_64' and sys_platform != 'darwin'" },
  { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
triton = [
  { index = "pytorch", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
